--- a/scss/modules/_filter.scss
+++ b/scss/modules/_filter.scss
@@ -1,3 +1,6 @@
+@use "sass:color";
+@use "variables";
+
 .filters {
   display: flex;
   flex-wrap: wrap;
@@ -7,8 +10,8 @@
   li {
     align-items: center;
     background: transparent;
-    border: 1px solid $color-primary;
-    color: $color-primary;
+    border: 1px solid variables.$color-primary;
+    color: variables.$color-primary;
     display: flex;
     margin: 4px;
     padding: 0 0 0 10px;
@@ -19,20 +22,20 @@
 
     button {
       background: none;
-      color: $color-gray-light;
-      font-size: $font-size-small;
+      color: variables.$color-gray-light;
+      font-size: variables.$font-size-small;
       height: 24px;
       margin: 3px;
       width: 24px;
 
       &:hover {
-        color: $color-primary;
+        color: variables.$color-primary;
       }
     }
 
     &.not {
       label {
-        color: $color-primary;
+        color: variables.$color-primary;
         text-decoration: line-through;
       }
     }
@@ -50,16 +53,16 @@
     input {
       background: transparent;
       border: 0;
-      border-bottom: 1px solid $color-primary;
-      font-family: $font-family;
-      font-size: $font-size;
+      border-bottom: 1px solid variables.$color-primary;
+      font-family: variables.$font-family;
+      font-size: variables.$font-size;
       margin: 0 15px 0 3px;
       outline: none;
       padding: 0 2px;
       width: 100%;
 
       &:focus {
-        background: transparentize($color-primary, 0.95);
+        background: color.adjust(variables.$color-primary, $alpha: -0.95);
       }
     }
 
