--- a/scss/modules/_forcegraph.scss
+++ b/scss/modules/_forcegraph.scss
@@ -1,6 +1,8 @@
+@use "variables";
+
 .graph {
-  background: $color-gray-dark;
-  font: $font-size-small $font-family;
+  background: variables.$color-gray-dark;
+  font: variables.$font-size-small variables.$font-family;
   height: 100%;
   width: 100%;
 
