--- a/scss/modules/_proportion.scss
+++ b/scss/modules/_proportion.scss
@@ -1,3 +1,5 @@
+@use "variables";
+
 .proportion-header {
   cursor: pointer;
 }
@@ -16,7 +18,7 @@
 
   span {
     box-sizing: border-box;
-    color: $color-white;
+    color: variables.$color-white;
     display: inline-block;
     font-weight: bold;
     min-width: 1.5em;
