--- a/scss/modules/_table.scss
+++ b/scss/modules/_table.scss
@@ -1,7 +1,9 @@
+@use "variables";
+
 table {
   border-collapse: separate;
   border-spacing: 0 0.5em;
-  padding: 0 $button-distance;
+  padding: 0 variables.$button-distance;
   width: 100%;
 
   &.attributes {
@@ -60,7 +62,7 @@ th {
 
     &::after {
       content: "\f10d";
-      font-family: $font-family-icons;
+      font-family: variables.$font-family-icons;
       padding-left: 0.25em;
       visibility: hidden;
     }
