feat: add ruler to measure distances

--- a/assets/icons/icon.scss
+++ b/assets/icons/icon.scss
@@ -26,7 +26,6 @@ $cache-breaker: string.unique-id();
     font-variant: normal;
     font-weight: normal;
     line-height: 1;
-    speak: none;
     text-rendering: auto;
     text-transform: none;
     vertical-align: 0;
@@ -56,3 +55,4 @@ $cache-breaker: string.unique-id();
 @include icon.icon("arrow-right-c", "\f10b");
 @include icon.icon("full-enter", "\e901");
 @include icon.icon("full-exit", "\e900");
+@include icon.icon("ruler", "\f333");
