fix: improve colorization of ruler feature - adds a box around the popup

--- a/scss/modules/_leaflet.scss
+++ b/scss/modules/_leaflet.scss
@@ -535,3 +535,9 @@
     }
   }
 }
+
+.leaflet-popup-content-wrapper {
+  background: variables.$color-white;
+  border-radius: 5px;
+  text-align: center;
+}
